@@ -3,6 +3,7 @@
   * feat: global keys
   * feat: lock/unlock all tools
   * refactor: always on top by default
+  * refactor: show all tools if a new tool is created
   * fix: click on transparent after closing help/settings
   * fix: toolbox always on top
 
